--- a/examples/contribs/dvonn/rules/rules.html
+++ b/examples/contribs/dvonn/rules/rules.html
@@ -2,7 +2,7 @@
 <html><head><title>Dvonn is a game</title>
 
 <meta http-equiv="Content-Type" content="text/html;
-charset=iso-8859-1">
+charset=utf-8">
 <body>
 <table border="0" cellpadding="0" cellspacing="0" height="98%" width="100%">
   <tbody><tr valign="top"> 
