Add 2.6.3 packages in src

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,11 @@
 
 <h1>Downloads</h1>
 
+<h2>Version 2.6.3</h2>
+<ul>
+<li><a href="libQGLViewer-2.6.3.tar.gz">libQGLViewer-2.6.3.tar.gz</a></li>
+<li><a href="libQGLViewer-2.6.3.zip">libQGLViewer-2.6.3.zip</a></li>
+</ul>
 
 <h2>Version 2.6.2</h2>
 <ul>
