Fin src/index css and icon links

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>libQGLViewer</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="qglviewer.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="images/qglviewer.ico" type="image/x-icon" />
-  <link rel="icon" href="images/qglviewer.icon.png" type="image/png" />
+  <link href="../qglviewer.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="../images/qglviewer.ico" type="image/x-icon" />
+  <link rel="icon" href="../images/qglviewer.icon.png" type="image/png" />
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
