Add 2.6.0 packages in src

--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,11 @@
 <li><a href="libQGLViewer-2.6.1.zip">libQGLViewer-2.6.1.zip</a></li>
 </ul>
 
+<h2>Version 2.6.0</h2>
+<ul>
+<li><a href="libQGLViewer-2.6.0.tar.gz">libQGLViewer-2.6.0.tar.gz</a></li>
+<li><a href="libQGLViewer-2.6.0.zip">libQGLViewer-2.6.0.zip</a></li>
+</ul>
+
 
 </body></html>
