Add index.php generator

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>libQGLViewer</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -24,39 +22,58 @@
 
 <div class="banner">
   <a class="qindex" href="../index.html">Home</a>
-  <a class="qindex" href="../download.html">Download</a>
-  <a class="qindex" href="../examples/index.html">Gallery</a>
+  <a class="qindex highlight" href="../download.html">Download</a>
+  <a class="qindex" href="../examples/index.html">Examples</a>
   <a class="qindex" href="../refManual/hierarchy.html">Documentation</a>
   <a class="qindex" href="../developer.html">Developer</a>
 </div>
 
 <br/>
 
-<h1>Downloads</h1>
+<h1>File listing</h1>
+<table style="margin:auto; border:1px solid #DDD;">
 
-<h2>Version 2.6.3</h2>
-<ul>
-<li><a href="libQGLViewer-2.6.3.tar.gz">libQGLViewer-2.6.3.tar.gz</a></li>
-<li><a href="libQGLViewer-2.6.3.zip">libQGLViewer-2.6.3.zip</a></li>
-</ul>
+<tr>
+  <td><a href="libQGLViewer-2.6.0.tar.gz" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.0.tar.gz']);">libQGLViewer-2.6.0.tar.gz</a></td>
+  <td style="padding:6px 24px">3.07 Mb</td>
+  <td>4534a10262c252c9fe60c6a2febe951d</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.0.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.0.zip']);">libQGLViewer-2.6.0.zip</a></td>
+  <td style="padding:6px 24px">3.74 Mb</td>
+  <td>02414f7d6bb92bd515c12e6b2f2224bb</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.1.tar.gz" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.1.tar.gz']);">libQGLViewer-2.6.1.tar.gz</a></td>
+  <td style="padding:6px 24px">3.08 Mb</td>
+  <td>65d41b1fa3e1e5396cb2952b8c032c6c</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.1.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.1.zip']);">libQGLViewer-2.6.1.zip</a></td>
+  <td style="padding:6px 24px">3.74 Mb</td>
+  <td>1a1f2ba0bba268b116c43b578de10bec</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.2.tar.gz" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.2.tar.gz']);">libQGLViewer-2.6.2.tar.gz</a></td>
+  <td style="padding:6px 24px">3.08 Mb</td>
+  <td>e43959c53a9e0fe5d7bb831326732cd3</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.2.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.2.zip']);">libQGLViewer-2.6.2.zip</a></td>
+  <td style="padding:6px 24px">3.74 Mb</td>
+  <td>446f000f0dcdc6aa92980ab2c300dfa9</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.3.tar.gz" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.3.tar.gz']);">libQGLViewer-2.6.3.tar.gz</a></td>
+  <td style="padding:6px 24px">3.04 Mb</td>
+  <td>c2e741c575c78f737dc87ab751d9f423</td>
+</tr>
+<tr>
+  <td><a href="libQGLViewer-2.6.3.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.6.3.zip']);">libQGLViewer-2.6.3.zip</a></td>
+  <td style="padding:6px 24px">3.67 Mb</td>
+  <td>ab0a83ef78d5efa4175c9056cfb36621</td>
+</tr>
 
-<h2>Version 2.6.2</h2>
-<ul>
-<li><a href="libQGLViewer-2.6.2.tar.gz">libQGLViewer-2.6.2.tar.gz</a></li>
-<li><a href="libQGLViewer-2.6.2.zip">libQGLViewer-2.6.2.zip</a></li>
-</ul>
-
-<h2>Version 2.6.1</h2>
-<ul>
-<li><a href="libQGLViewer-2.6.1.tar.gz">libQGLViewer-2.6.1.tar.gz</a></li>
-<li><a href="libQGLViewer-2.6.1.zip">libQGLViewer-2.6.1.zip</a></li>
-</ul>
-
-<h2>Version 2.6.0</h2>
-<ul>
-<li><a href="libQGLViewer-2.6.0.tar.gz">libQGLViewer-2.6.0.tar.gz</a></li>
-<li><a href="libQGLViewer-2.6.0.zip">libQGLViewer-2.6.0.zip</a></li>
-</ul>
-
-
-</body></html>
+</table>
+</body>
+</html>
