--- a/changeLog.html
+++ b/changeLog.html
@@ -32,6 +32,12 @@
 
   <h1>Change Log</h1>
   
+  <h2>Sat 31st 2025 - 3.0.0</h2>
+  <b>New features</b>
+  <ul>
+    <li>Change license to LGPL-v3.</li>
+  </ul>
+
   <h2>Sat 31st 2022 - 2.9.1</h2>
   <b>Bug fixes or improvements</b>
   <ul>
@@ -737,7 +743,7 @@
   <p>
     <a href="http://validator.w3.org/check/referer"><img src="images/xhtml.png" alt="Valid XHTML 1.0!" height="31" width="88"/></a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="Valid CSS!" width="88" height="31"/></a>
-    <i>Last modified on Thursday, December 29, 2022.</i>
+    <i>Last modified on Friday, August 22, 2025.</i>
   </p>
 
 </body>
