--- a/developer.html
+++ b/developer.html
@@ -40,7 +40,7 @@
 
 <h2>Get on board !</h2>
 <p>
-libQGLViewer is distributed under the terms of the GNU-GPL license. The entire source code is
+libQGLViewer is distributed under the terms of the GNU-LGPL license. The entire source code is
 available for <a href="download.html">download</a>, and can freely be edited. If you want to
 contribute to the project, just send me an <a href="mailto:contact@libqglviewer.com">e-mail</a> with your code and an explanation, I'll do the merge.
 </p>
@@ -108,7 +108,7 @@ as they are, which features are in the todo list and which are not scheduled.
 <p>
   <a href="http://validator.w3.org/check/referer"><img src="images/xhtml.png" alt="Valid XHTML 1.0!" height="31" width="88"/></a>
   <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="Valid CSS!" width="88" height="31"/></a>
-  <i>Last modified on Thursday, December 29, 2022.</i>
+  <i>Last modified on Friday, August 22, 2025.</i>
 </p>
 
 </body></html>
