--- a/download.html
+++ b/download.html
@@ -32,27 +32,11 @@
 
 <h1>libQGLViewer download</h1>
 
-libQGLViewer uses a <a href="dualLicensing.html">dual licensing</a> business model:
-
-<h2>Commercial license</h2>
-Buy a <a href="commercial.html">commercial license</a> if you are intending to create a proprietary application that uses libQGLViewer.		
-
-<script type="text/javascript">
-function onCheckboxClicked() {
-	var checked = document.getElementById('checkbox').checked;
-	document.getElementById('download').style.display=checked?'block':"none";    
-}
-</script>
-
-<h2>GNU GPL license</h2>
-		This code is released under the terms of the <a href="http://www.fsf.org/licenses/">GNU-GPL</a> license.
-    	Any software you create that uses any part of this source code (or its compiled version) will have to be open sourced under the same conditions.
-
+<h2>GNU LGPL license</h2>
 <p>
-		<input type="checkbox" id="checkbox" onclick="onCheckboxClicked()">
-		<label for="checkbox">I agree with the terms of the GNU GPL license and I understand its restrictions.</label>
+  This code is released under the terms of the <a href="https://www.gnu.org/licenses/lgpl-3.0.en.html">GNU-LGPL</a> license.
 </p>
-
+ 
 <div id="download" style="display:none">
 	<p>
 		Select your architecture: &nbsp;
@@ -75,7 +59,7 @@ href="http://www.libqglviewer.com/download_statistics.html">download statistics<
 <p>
   <a href="http://validator.w3.org/check/referer"><img src="images/xhtml.png" alt="Valid XHTML 1.0!" height="31" width="88"/></a>
   <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="Valid CSS!" width="88" height="31"/></a>
-  <i>Last modified on Thursday, December 29, 2022.</i>
+  <i>Last modified on Friday, August 22, 2025.</i>
 </p>
     
 </body>
