--- a/faq.html
+++ b/faq.html
@@ -47,7 +47,7 @@
 
   <a name="whatisit"></a>
   <h2>What is libQGLViewer ?</h2>
-  libQGLViewer is a GPL free software C++ library which lets you quickly start the development of a new 3D application. It
+  libQGLViewer is a LGPL free software C++ library which lets you quickly start the development of a new 3D application. It
   is designed for 3D developers, who can display and move around a 3D scene by simply providing the OpenGL orders that define
   their 3D geometry. The viewer is designed to be as general as possible and is not designed for a specific 3D application.
 
@@ -108,7 +108,7 @@
   <p>
     <a href="http://validator.w3.org/check/referer"><img src="images/xhtml.png" alt="Valid XHTML 1.0!" height="31" width="88"/></a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="Valid CSS!" width="88" height="31"/></a>
-    <i>Last modified on Thursday, December 29, 2022.</i>
+    <i>Last modified on Friday, August 22, 2025.</i>
   </p>
 
 </body>
