--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
   formats, but it can be the base for the coding of such a viewer.
 
   <p>
-    libQGLViewer uses <a href="dualLicensing.html">dual licensing</a>: it is freely available under the terms of the GNU-GPL
-    license for open source software development, while commercial applications can apply for a <a href="commercial.html">commercial license</a>.
+    libQGLViewer is freely available under the terms of the GNU-LGPL license.
   </p>
 
 
@@ -90,6 +89,15 @@
 
   <table style="width:90%; margin-left:50px; border:1px solid #AAF; background-color:#DDE" cellspacing="8" cellpadding="8">
 
+    <tr>
+      <td>
+        <b>Aug 21st, 2025</b>
+        <br/>
+        <a href="changeLog.html">Version 3.0.0</a>
+      </td>
+      <td>Change license to LGPL v3.</td>
+    </tr>
+    
     <tr>
       <td>
         <b>Dec 31st, 2022</b>
@@ -134,7 +142,7 @@
   <p>
     <a href="http://validator.w3.org/check/referer"><img src="images/xhtml.png" alt="Valid XHTML 1.0!" height="31" width="88"/></a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="Valid CSS!" width="88" height="31"/></a>
-    <i>Last modified on Thursday, December 29, 2022.</i>
+    <i>Last modified on Friday, August 22, 2025.</i>
   </p>
 
 </body>
