--- a/installWindows.html
+++ b/installWindows.html
@@ -48,15 +48,14 @@ The library and the examples were here compiled using (and can be used with) Min
 </a></p>
 -->
 
-This source code is released under the GPL license. If you are using libQGLViewer in a
-commercial application, you need to purchase a <a href="mailto:contact@libqglviewer.com?Subject=Commercial license">libQGLViewer commercial license</a>.
+This source code is released under the LGPL license.
 
 <h2>Compilation from the sources</h2>
 
 Make sure your Qt installation is up to date and running. Try building one of the Qt OpenGL examples first.
 
 <p>
-Then download and unzip <a href="http://www.libqglviewer.com/src/libQGLViewer-2.9.1.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-2.9.1.zip']);">libQGLViewer-2.9.1.zip</a>.
+Then download and unzip <a href="http://www.libqglviewer.com/src/libQGLViewer-3.0.0.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-3.0.0.zip']);">libQGLViewer-3.0.0.zip</a>.
 </p>
 
 Depending on your environment:
@@ -66,7 +65,7 @@ Depending on your environment:
 <li><a name="mingw"></a><b>MinGW</b> (available when you install the OpenSource Qt version):
 launch the <i>Qt Command Prompt</i> from the <i>Start</i> menu and type:
 <pre>
-cd \path\to\libQGLViewer-2.9.1\QGLViewer
+cd \path\to\libQGLViewer-3.0.0\QGLViewer
 qmake
 mingw32-make
 </pre></li>
@@ -79,7 +78,7 @@ mingw32-make
 </ul>
 
 <p>
-Then copy the generated <code>QGLViewer2.dll</code> and <code>QGLViewer2d.dll</code> to a system
+Then copy the generated <code>QGLViewer3.dll</code> and <code>QGLViewer3d.dll</code> to a system
 shared directory such as <code>C:\Windows\System32</code>. An alternative is to copy the <code>dll</code> in every executable's directory.
 
 <p>
@@ -139,8 +138,8 @@ Install the resulting plugin library (<code>qglviewerplugin.dll</code>) in <code
 integrated designer.
 </p>
 
-Make sure you are building and using the <i>Release</i> version of <code>QGLViewer2.dll</code>.
-Note that you also have to install <code>QGLViewer2.dll</code> in <code>C:\Windows\System32</code> (as described above).
+Make sure you are building and using the <i>Release</i> version of <code>QGLViewer3.dll</code>.
+Note that you also have to install <code>QGLViewer3.dll</code> in <code>C:\Windows\System32</code> (as described above).
 Copying this file to <code>$QTDir\bin</code> sometimes also seems necessary.
 
 <p>
@@ -168,7 +167,7 @@ Please <a href="mailto:contact@libqglviewer.com">let me know</a> if you encounte
 <p>
   <a href="http://validator.w3.org/check/referer"><img src="images/xhtml.png" alt="Valid XHTML 1.0!" height="31" width="88"/></a>
   <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css.gif" alt="Valid CSS!" width="88" height="31"/></a>
-  <i>Last modified on Thursday, December 29, 2022.</i>
+  <i>Last modified on Friday, August 22, 2025.</i>
 </p>
 
 </body>
