Fix download page, update web site url

--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
   This code is released under the terms of the <a href="https://www.gnu.org/licenses/lgpl-3.0.en.html">GNU-LGPL</a> license.
 </p>
  
-<div id="download" style="display:none">
+<div>
 	<p>
 		Select your architecture: &nbsp;
 		<a href="installWindows.html"><img src="images/windows.png" width="55" height="54" align="middle" alt="windows"/></a> &nbsp; &nbsp; &nbsp; &nbsp;
@@ -47,7 +47,7 @@
 
 <!-- <p style="font-size:smaller">
 		Previous versions of the library as well as md5 check sums are available in the 
-		<a href="http://www.libqglviewer.com/src" onclick="javascript: _gaq.push(['_trackPageview', '/src']);">source repository</a>.
+		<a href="https://gillesdebunne.github.io/libQGLViewer/src" onclick="javascript: _gaq.push(['_trackPageview', '/src']);">source repository</a>.
 		</p>
  -->
  </div>
