--- a/installWindows.html
+++ b/installWindows.html
@@ -42,7 +42,7 @@ on <img src="images/windows.png" width="55" height="54" alt="windows"/>Windows</
 The installer allows you to evaluate the library from its demonstration examples and its documentation and to start creating your own programs.
 The library and the examples were here compiled using (and can be used with) MinGW and the open source version of Qt.
 
-<p><a href="http://www.libqglviewer.com/src/libQGLViewer-installer.exe" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-installer.exe']);" class="download">
+<p><a href="https://gillesdebunne.github.io/libQGLViewer/src/libQGLViewer-installer.exe" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-installer.exe']);" class="download">
 <img src="images/downloadButton.jpg" width="41" height="46" align="middle" alt="download"/>
 <span>Download the libQGLViewer installer (version 2.3)</span>
 </a></p>
@@ -55,7 +55,7 @@ This source code is released under the LGPL license.
 Make sure your Qt installation is up to date and running. Try building one of the Qt OpenGL examples first.
 
 <p>
-Then download and unzip <a href="http://www.libqglviewer.com/src/libQGLViewer-3.0.0.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-3.0.0.zip']);">libQGLViewer-3.0.0.zip</a>.
+Then download and unzip <a href="https://gillesdebunne.github.io/libQGLViewer/src/libQGLViewer-3.0.0.zip" onclick="javascript: _gaq.push(['_trackPageview', 'libQGLViewer-3.0.0.zip']);">libQGLViewer-3.0.0.zip</a>.
 </p>
 
 Depending on your environment:
